# ai-energy-saver

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MODEL_CARD.md  NOTICE.md  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  SPONSORS.md  SPONSORSHIP.md  SUPPORT.md  config.yaml.example  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: sample_meter.csv  sample_tariff.json
src/ai_energy_saver/: __init__.py  analyzer.py
src/ai_energy_saver/adapters/: csv_adapter.py  tariff_loader.py
src/ai_energy_saver/core/: features.py
src/ai_energy_saver/providers/anomaly/: base.py  isolation_forest.py
src/ai_energy_saver/providers/co2/: base.py  static_intensity.py
src/ai_energy_saver/providers/forecast/: base.py  prophet_forecaster.py
src/ai_energy_saver/providers/optimize/: base.py  tariff_window.py
tests/: test_analyzer_smoke.py  test_csv_adapter.py  test_isolation_forest.py  test_tariff_window.py
