[project]
name = "ai-energy-saver"
version = "0.1.0"
description = "AI-powered lightweight energy saver library for forecasting, optimisation, and anomaly detection."
authors = [
    { name="Deep Swaroop Sachan", email="deep12650@users.noreply.github.com" },
    { name="Karan Srinivas", email="justkarnaa@users.noreply.github.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["energy", "ai", "forecasting", "optimisation", "anomaly-detection"]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "prophet>=1.1",
    "matplotlib>=3.7.0",
    "typer>=0.12.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.3.0", "mypy>=1.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ai-energy-saver = "ai_energy_saver.cli:app"
